# BankirPay_payments_lib

./: Cargo.toml
src/: lib.rs
src/errors/: mod.rs  payment_error.rs
src/models/: mod.rs
src/repository/: exchange_rate.rs  merchant.rs  mod.rs  payment.rs  requisite.rs  trader.rs
src/use_case/: exchange_rate.rs  kafka.rs  merchant.rs  mod.rs  payment.rs  requisite.rs  trader.rs
