[package]
name = "bankirpay_payments_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.44.2", features = ["default"]}
bankirpay_lib = {git = "https://github.com/XSxxxswh/BankirPay_lib.git", rev = "d2f94c7053c1c9b22a756fc1adfe1cd4089e6648"}
serde = {version = "1.0.218", features = ["default"]}
thiserror = {version = "2.0.11", features = ["default"]}
axum = {version = "0.8.1", features = ["default", "tokio"]}
tonic = {version = "0.13.0", features = ["default"]}
chrono = {version = "0.4.40", features = ["default", "serde"]}
uuid = {version = "1.15.0", features = ["fast-rng", "v7"]}
prost = {version = "0.13.5", features = ["default"]}
redis = {version = "0.29.5", features = ["default", "tokio-comp", "r2d2"]}
bigdecimal = {version = "0.4.7", features = ["default", "serde-json"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "json"] }
tracing = {version = "0.1.41"}
rust_decimal = {version = "1.37.1", features = ["db-tokio-postgres", "macros"]}
tokio-postgres = {version = "0.7.13", features = ["with-chrono-0_4"]}
deadpool-redis = {version = "0.20.0", features = ["default"]}
deadpool-postgres = {version = "0.14.1", features = ["default"]}
simd-json = "0.15.0"
jemallocator = "0.5.4"
rdkafka = "0.37.0"
futures = "0.3.31"
tracing-appender = "0.2.3"
tokio-util = "0.7.14"
lazy_static = "1.5.0"